// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  className="sc-hKMtZM byKIPJ"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt=""
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bczRLJ fUSoHQ k-Title k-u-align-center k-Title--senary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-dkzDqf gHfsZI k-Button k-VerticalCardWithAction__button k-Button--medium k-Button--helium k-Button--fit-content"
      href={null}
      onClick={null}
      style={
        Object {
          "--Button-border-radius": null,
          "--Button-bullet-color": null,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  className="sc-hKMtZM byKIPJ"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt="Image alt"
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bczRLJ fUSoHQ k-Title k-u-align-center k-u-margin-bottom-singleHalf k-Title--senary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    <p
      className="sc-gsnTZi hVytgS k-Paragraph k-u-align-center k-u-margin-top-singleHalf k-Paragraph--tertiary k-Paragraph--noMargin"
    >
      Custom text
    </p>
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-dkzDqf gHfsZI k-Button k-VerticalCardWithAction__button k-Button--medium k-Button--helium k-Button--fit-content"
      href={null}
      onClick={null}
      style={
        Object {
          "--Button-border-radius": null,
          "--Button-bullet-color": null,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;
